# AutoZuma

./: .gitignore  LICENSE  README.md  launcher.bat  pyproject.toml
assets/levels/topology/: Groovefest.json  blackswirley.json  claw.json  coaster.json  inversespiral.json  longrange.json  loopy.json  overunder.json  riverbed.json  serpents.json  snakepit.json  space.json  spaceinvaders.json  spiral.json  squaresville.json  targetglyph.json  (+6 more)
config/: strategy_v1_plus.ini
docs/: assets.md  migration_log.md  migration_principles.md  session_handoff.md  topology.md
src/autozuma/: __init__.py  project_paths.py
tests/: test_assets_loader.py  test_assets_registry.py  test_assets_validator.py  test_cli_live_static.py  test_clusters.py  test_colors.py  test_control_capture.py  test_control_commands.py  test_control_execution.py  test_control_hotkeys.py  test_entities.py  test_gui_controller.py  test_gui_global_hotkeys.py  test_gui_i18n.py  test_gui_schema.py  test_gui_settings.py  test_launcher_state.py  test_launcher_templates.py  test_level_recognition.py  test_line_of_sight.py  test_project_paths.py  test_roi.py  test_runtime_config.py  test_runtime_debug.py  test_runtime_host.py  test_runtime_live.py  test_runtime_loop.py  test_runtime_modes.py  test_runtime_params.py  test_runtime_session.py  test_runtime_static_runtime.py  test_runtime_strategy_config.py  test_runtime_ui.py  test_static_frame_decision.py  test_strategy_action_updates.py  test_strategy_actions.py  test_strategy_coins.py  test_strategy_commands.py  test_strategy_discard.py  test_strategy_prediction.py  (+7 more)
(+60 files in other folders)
