[project]
name = "autozuma-next"
version = "0.1.0"
description = "Clean refactor target for the AutoZuma visual automation prototype."
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "opencv-python",
    "mss",
    "pywin32",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
gui = [
    "PySide6",
]

[project.scripts]
autozuma-validate-assets = "autozuma.cli.validate_assets:main"
autozuma-live-static = "autozuma.cli.live_static:main"
autozuma-gui = "autozuma.gui.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
